<resources>
    <string name="app_name">CommuneAlert App</string>
    <string name="Logo">splash screen logo</string>
    <string name="loginheader">header login</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="loginButton">login</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_form_background">login form background</string>
    <string name="login_logo">login logo</string>
    <string name="insert_email">insert email</string>
    <string name="insert_password">insert password</string>
    <string name="new_user">New user?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="recover">Recover</string>
    <string name="welcome_to_communealert">Welcome to CommuneAlert</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="appdescription">Be alert on all suspicious activities happening in your area</string>
    <string name="icon">icon</string>
    <string name="group_image">group image</string>
    <string name="background_for_logo">logoBackground</string>
    <string name="background_for_login_form">loginBackground</string>
    <string name="logo_image">Logo</string>
    <string name="login_text_view">LoginTv</string>
    <string name="phone_number_text_view">PhoneNumberTv</string>
    <string name="phone_number">Phone Number</string>
    <string name="new_user_register">New user? Register</string>
    <string name="recover_password">Recover password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="my_groups">My groups</string>
    <string name="crime">Crime</string>
    <string name="map">Map</string>
    <string name="notification">Notification</string>
    <string name="hamburger_button">Hamburger button</string>
    <string name="invite_button">Invite button</string>
    <string name="header_background">header background</string>
    <string name="report_crime">Report crime</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="button4">Button</string>
    <string name="button5">Button</string>
    <string name="theft_robbery">Theft / Robbery</string>
    <string name="house_break_in">House break-in</string>
    <string name="missing_person">Missing person</string>
    <string name="violence_assault">Violence / Assault</string>
    <string name="car_vandalism">Car Vandalism</string>
    <string name="background_for_header">background for header</string>
    <string name="header_logo">header logo</string>
    <string name="login_background">background for login form</string>
    <string name="create_account_button">button for creating account</string>
    <string name="register1">Registration</string>
    <string name="username1">Username</string>
    <string name="phone_number1">Phone number</string>
    <string name="register2">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>