<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Registration">

    <ProgressBar
        android:id="@+id/registration_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:visibility="gone"
        tools:visibility="gone" />

    <RelativeLayout
        android:id="@+id/registerForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00BCD4">

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="197dp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/background_for_logo"
            app:srcCompat="@drawable/headerbackground" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="222dp"
            android:layout_height="63dp"
            android:layout_above="@id/ivRegisterForm"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="49dp"
            android:layout_marginLeft="49dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="-99dp"
            android:contentDescription="@string/logo_image"
            app:srcCompat="@drawable/finallogo" />

        <ImageView
            android:id="@+id/ivRegisterForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/background_for_login_form"
            android:cropToPadding="false"
            app:srcCompat="@drawable/loginbackground" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="455dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="139dp"
            android:layout_marginEnd="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="138dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/login_text_view"
                android:gravity="center"
                android:text="@string/register1"
                android:textColor="#03A9F4"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:hint="username"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:hint="email address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/register_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:hint="password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/register_PasswordRetype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:hint="confirm password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button"
                android:gravity="center"
                android:text="@string/register2"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLoginLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_login"
                android:textColor="#2196F3"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>