<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:contentDescription="background header"
        app:srcCompat="@drawable/top_background"
        tools:layout_editor_absoluteX="-9dp"
        tools:layout_editor_absoluteY="-10dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="324dp"
        android:layout_marginRight="324dp"
        app:srcCompat="@drawable/hamburger" />

    <ImageView
        android:id="@+id/btnCreateGroup"
        android:layout_width="73dp"
        android:layout_height="41dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginRight="-2dp"
        android:clickable="false"
        android:contentDescription="@string/invite_button"
        android:onClick="openCreateGroupActivity"
        app:srcCompat="@drawable/invite_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="98dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:text="@string/my_groups"
        android:textColor="#000000"
        android:textSize="18sp" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="259dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="133dp"
        android:background="@drawable/searchbutton" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:background="#DAD8D8"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_group"
            android:onClick="openGroupsActivity"
            android:text="@string/my_groups"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btnReportCrime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_report"
            android:onClick="openReportCrimeActivity"
            android:text="@string/crime"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_map"
            android:text="@string/map"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_notifications"
            android:text="@string/notification"
            android:textSize="8sp" />
    </LinearLayout>


</RelativeLayout>